fixed article alignment

--- a/articlestyles.css
+++ b/articlestyles.css
@@ -40,7 +40,7 @@ header a {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     line-height: 1.6;
     font-size: 1.3rem;
-    float: left;
+    
 
 
 
